--- a/productapi/Properties/launchSettings.json
+++ b/productapi/Properties/launchSettings.json
@@ -16,8 +16,10 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7008;http://localhost:5036",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "Key": "Value"
+      },
+      "hotReloadProfile": "aspnetcore"
     }
   }
 }
